2012-08-03  David Grogan  <dgrogan@chromium.org>

        IndexedDB: Core upgradeneeded logic
        https://bugs.webkit.org/show_bug.cgi?id=92558

        Reviewed by Ojan Vafai.

        This is the backend webkit logic needed for integer versions. The rest
        is in https://bugs.webkit.org/show_bug.cgi?id=89505.

        I tried to make use of the existing processPendingCalls and added two
        more queues, pendingOpenWithVersionCalls and
        pendingSecondHalfOpenWithVersionCalls. The "second half" refers to
        how there are two events that need to be fired in response to an
        open-with-version call. The "second half" queue holds the open
        requests that should immediately follow the caller's upgradeneeded
        handler.

        No new tests, there are so many they are in their own patch:
        https://bugs.webkit.org/show_bug.cgi?id=92560

        Though this patch doesn't change any expected behavior anyway, lack of
        regressions is what we're hoping for here.

        * Modules/indexeddb/IDBBackingStore.h:
        (IDBBackingStore):
        * Modules/indexeddb/IDBCallbacks.h:
        (WebCore::IDBCallbacks::onBlocked):
        (WebCore::IDBCallbacks::onUpgradeNeeded):
        * Modules/indexeddb/IDBDatabaseBackendImpl.cpp:
        (IDBDatabaseBackendImpl::PendingOpenCall):
        (IDBDatabaseBackendImpl::PendingOpenWithVersionCall):
        (WebCore::IDBDatabaseBackendImpl::PendingOpenWithVersionCall::create):
        (WebCore::IDBDatabaseBackendImpl::PendingOpenWithVersionCall::callbacks):
        (WebCore::IDBDatabaseBackendImpl::PendingOpenWithVersionCall::version):
        (WebCore::IDBDatabaseBackendImpl::PendingOpenWithVersionCall::PendingOpenWithVersionCall):
        (WebCore):
        (WebCore::IDBDatabaseBackendImpl::IDBDatabaseBackendImpl):
        (WebCore::IDBDatabaseBackendImpl::openInternal):
        (WebCore::IDBDatabaseBackendImpl::metadata):
        (WebCore::IDBDatabaseBackendImpl::setVersion):